--- a/src/VMManager.Services.Interfaces/VMManager.Services.Interfaces.csproj
+++ b/src/VMManager.Services.Interfaces/VMManager.Services.Interfaces.csproj
@@ -12,13 +12,13 @@
   <ItemGroup>
     <!-- Needed for Host, IFileRepository, other shared types -->
     <ProjectReference Include="..\VMManager.Models\VMManager.Models.csproj" />
-
+    <ProjectReference Include="..\VMManager.Core\VMManager.Core.csproj" />
     <ProjectReference Include="..\VMManager.Common\VMManager.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <!-- Ensure logger interface is available -->
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
